# zorba-geo-module

./: .travis.yml  CMakeLists.txt  NOTICE.txt  README.md
cmake_modules/: FindGeos.cmake
cmake_modules/Windows/: FindGeos.cmake
src/: CMakeLists.txt  geo.xq
src/com/zorba-xquery/www/modules/: CMakeLists.txt  geoproj-param.xsd  geoproj.xq
src/geo.xq.src/: geo_functions.cpp  geo_module.h
src/org/expath/ns/: CMakeLists.txt  geo.xq
src/org/expath/ns/geo.xq.src/: geo_functions.cpp  geo_functions.h  geo_module.cpp
test/ExpQueryResults/geo/: union5_3d.xml.res  union5_3dp.xml.res
test/Queries/geo/: .project  area1.xq  area10.xq  area2.xq  area3.xq  area4.xq  area5.xq  area6.xq  area7.xq  area8.xq  area9.xq  as_binary1.xq  as_text1.xq  as_text2.xq  as_text3.xq  as_text4.xq  as_text5.xq  as_text6.xq  as_text7.xq  as_text8.xq  as_text9.xq  boundary1.xq  boundary10.xq  boundary11.xq  boundary12.xq  boundary13.xq  boundary14.xq  boundary2.xq  boundary3.xq  boundary4.xq  boundary5.xq  boundary6.xq  boundary7.xq  boundary8.xq  boundary9.xq  bounding-polygons1.xq  bounding-polygons2.xq  bounding-polygons3.xq  buffer1.xq  buffer10.xq  (+293 more)
